--- a/Day01-15/01.初识Python.md
+++ b/Day01-15/01.初识Python.md
@@ -85,7 +85,7 @@ export PATH=$PATH:/usr/local/python37/bin
 source .bash_profile
 ```
 
-#### macOS环境
+#### macOS环境aaa
 
 macOS也自带了Python 2.x版本，可以通过[Python的官方网站](https://www.python.org)提供的安装文件（pkg文件）安装Python 3.x的版本。默认安装完成后，可以通过在终端执行python命令来启动2.x版本的Python解释器，可以通过执行python3命令来启动3.x版本的Python解释器。
 
