--- a/Day01-15/01.初识Python.md
+++ b/Day01-15/01.初识Python.md
@@ -34,7 +34,7 @@ Python的缺点主要集中在以下几点。
 
 目前Python在Web应用开发、云基础设施、DevOps、网络爬虫开发、数据分析挖掘、机器学习等领域都有着广泛的应用，因此也产生了Web后端开发、数据接口开发、自动化运维、自动化测试、科学计算和可视化、数据分析、量化交易、机器人开发、图像识别和处理等一系列的职位。
 
-### 搭建编程环境
+### 搭建编程环境a
 
 #### Windows环境
 
